# diablo4-data-harvest

./: .gitignore  Cargo.toml  README.md  aff.json
src/: app.rs  main.rs  stl.rs  utils.rs
src/parsers/: aff.rs  mod.rs  skl.rs  stl.rs
